@@ -29,7 +29,7 @@ test_Initialization(void) {
 void
 test_GetAndFree(void) {
 	u_long initial = free_recvbuffs();
-	recvbuf_t* buf = get_free_recv_buffer();
+	recvbuf_t* buf = get_free_recv_buffer(TRUE);
 
 	TEST_ASSERT_EQUAL_UINT(initial-1, free_recvbuffs());
 	freerecvbuf(buf);
@@ -40,7 +40,7 @@ test_GetAndFree(void) {
 void
 test_GetAndFill(void) {
 	// int initial = free_recvbuffs();
-	recvbuf_t* buf = get_free_recv_buffer();
+	recvbuf_t* buf = get_free_recv_buffer(TRUE);
 
 	add_full_recv_buffer(buf);
 	TEST_ASSERT_EQUAL_UINT(1, full_recvbuffs());
